[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "seq-len-balance"
version = "0.1.0"
requires-python = ">=3.11"
description = "Fast sequence-length balancing: KK partition, FFD, and BFD bin packing"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = ["maturin>=1.0,<2.0"]
